--- a/app/src/main/res/layout/inputtugas.xml
+++ b/app/src/main/res/layout/inputtugas.xml
@@ -1,5 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
+
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/LinearLayoutMain"
     android:layout_width="match_parent"
@@ -92,4 +96,5 @@
         android:layout_height="wrap_content"
         android:text="simpan" />
 
-</LinearLayout>
+    </LinearLayout>
+</ScrollView>
