--- a/app/src/main/res/layout/activity_create_data.xml
+++ b/app/src/main/res/layout/activity_create_data.xml
@@ -9,12 +9,32 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        android:paddingBottom="16dp"
-        android:paddingLeft="16dp"
-        android:paddingRight="16dp"
-        android:paddingTop="16dp"
         android:weightSum="1">
+        <android.support.design.widget.AppBarLayout
+            android:id="@+id/appbar"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingTop="8dp"
+            android:theme="@style/AppTheme.AppBarOverlay">
+            <!-- our toolbar -->
+            <android.support.v7.widget.Toolbar
+                android:id="@+id/toolbar"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="?attr/colorPrimary"
+                android:minHeight="?attr/actionBarSize"
+                android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
+                app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
 
+            <!-- our tablayout to display tabs -->
+            <android.support.design.widget.TabLayout
+                android:id="@+id/tabLayout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="?attr/colorPrimary"
+                android:minHeight="?attr/actionBarSize"
+                android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />
+        </android.support.design.widget.AppBarLayout>
         <TextView
             android:id="@+id/textView6"
             android:layout_width="wrap_content"
@@ -33,7 +53,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:fontFamily="serif"
-            android:text="Judul" />
+            android:text="  Judul" />
 
         <EditText
             android:id="@+id/etjudul"
@@ -48,7 +68,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:fontFamily="serif"
-            android:text="Deskripsi" />
+            android:text="  Deskripsi" />
 
         <EditText
             android:id="@+id/etdeskripsi"
@@ -63,7 +83,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:fontFamily="serif"
-            android:text="Tanggal jatuh tempo"
+            android:text="  Tanggal jatuh tempo"
             android:textSize="14sp" />
 
         <EditText
@@ -79,7 +99,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:fontFamily="serif"
-            android:text="Waktu jatuh tempo"
+            android:text="  Waktu jatuh tempo"
             android:textSize="14sp" />
 
         <EditText
@@ -91,10 +111,10 @@
             android:textSize="12sp" />
 
         <Button
-            android:id="@+id/button_submit"
-            android:layout_width="wrap_content"
+            android:text="Simpan"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="simpan" />
+            android:id="@+id/Simpan" />
 
     </LinearLayout>
 </ScrollView>
