--- a/app/src/main/res/layout/activity_tugasku.xml
+++ b/app/src/main/res/layout/activity_tugasku.xml
@@ -41,8 +41,12 @@
         android:layout_alignParentBottom="true"
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
+        android:layout_alignWithParentIfMissing="false"
+        android:layout_marginBottom="24dp"
+        android:layout_marginEnd="21dp"
+        android:layout_marginRight="21dp"
         android:clickable="true"
-        app:fabSize="mini"
+        app:fabSize="normal"
         app:srcCompat="@drawable/ic_add_black_24dp" />
 
 
