--- a/app/src/main/res/layout/item_jadwal.xml
+++ b/app/src/main/res/layout/item_jadwal.xml
@@ -4,7 +4,8 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="?android:attr/selectableItemBackground"
-    android:padding="8dp">
+    android:padding="16dp">
+
 
     <ImageButton
         android:id="@+id/imageButton"
@@ -25,5 +26,8 @@
         android:layout_height="160dp"
         android:gravity="center"
         android:textAppearance="@style/TextAppearance.AppCompat.Title"
-        android:textColor="@android:color/white" />
+        android:textColor="@android:color/white"
+        tools:text="Judul" />
+
+
 </RelativeLayout>
